Fixed #35096 -- Corrected alignment for error lists in admin "wide" forms.
Regression in be06c39abe80ca650e37810d16d15ff60e8c9727 (LTR) and
b34a4771a3d4cd7829a1f38a0f6a7a0da519a724 (RTL).

--- a/django/contrib/admin/static/admin/css/forms.css
+++ b/django/contrib/admin/static/admin/css/forms.css
@@ -195,6 +195,7 @@ fieldset .fieldBox {
 }
 
 form .wide p.help,
+form .wide ul.errorlist,
 form .wide div.help {
     padding-left: 50px;
 }
